<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:backgroundTint="@color/toolBarText"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/tool_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/toolBarColor"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tool_bar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/tooolBarText"
            android:textColor="@color/toolBarText"
            android:fontFamily="@font/carter_one"
            android:textSize="30sp"/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayoutt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tool_bar">

        <TextView
            android:id="@+id/categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/categories"
            android:gravity="center_horizontal"
            android:textSize="24sp"/>
    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutt"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="40dp"
        android:background="@color/list_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_bar_main"/>

    <FrameLayout
        android:id="@+id/bottom_bar_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/bottom_bar_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/vsego"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/vsego"
                    android:textSize="22sp"/>

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dohodi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:fontFamily="@font/montserrat_bold"
                    android:textSize="16sp"
                    android:text="@string/dohodi" />

                <Space
                    android:layout_width="40dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/rashodi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:fontFamily="@font/montserrat_bold"
                    android:textSize="16sp"
                    android:text="@string/rashodi" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="0dp">

                <EditText
                    android:id="@+id/date_dohodi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/date_start"
                    android:inputType="date"
                    android:minHeight="48dp"
                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/tire"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="   —"
                    tools:ignore="HardcodedText" />

                <EditText
                    android:id="@+id/date_rashodi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/date_end"
                    android:inputType="date"
                    android:minHeight="48dp"
                    android:gravity="end"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/lmd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="@font/montserrat_medium_italic"
                    android:gravity="center_horizontal"
                    android:inputType="number"
                    android:minHeight="48dp"
                    android:text="@string/like_mcuh_dohodi"
                    android:textSize="20sp"
                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/lmr"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="@font/montserrat_medium_italic"
                    android:gravity="center_horizontal"
                    android:inputType="number"
                    android:minHeight="48dp"
                    android:text="62.705 ₽"
                    android:textSize="20sp"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

            <TextView
                android:id="@+id/balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="20sp"
                android:text="БАЛАНС:" />

            <TextView
                android:id="@+id/bal_sum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="186sp"
                android:fontFamily="@font/montserrat_medium_italic"
                android:textSize="20sp"
                android:text="8.637 ₽" />

        </LinearLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
